Update DynamoDB Table ARN

--- a/serverless.yml
+++ b/serverless.yml
@@ -1,25 +1,22 @@
 service: dio-live-project
-
 frameworkVersion: '2'
-
-
 provider:
   name: aws
   runtime: nodejs14.x
   lambdaHashingVersion: '20201221'
   region: us-east-1
   iam:
-      role:
-          statements:
-            - Effect: Allow
-              Action:
-                - dynamodb:PutItem
-                - dynamodb:UpdateItem
-                - dynamodb:GetItem
-                - dynamodb:Scan
-              Resource:
-                - arn:aws:dynamodb:us-east-1:167880115321:table/ItemTable
-                
+    role:
+      statements:
+        - Effect: Allow
+          Action:
+            - dynamodb:PutItem
+            - dynamodb:UpdateItem
+            - dynamodb:GetItem
+            - dynamodb:Scan
+          Resource:
+            - arn:aws:dynamodb:us-east-1:808005381747:table/ItemTable
+
 functions:
   hello:
     handler: src/hello.handler
@@ -27,30 +24,35 @@ functions:
       - http:
           path: /
           method: get
+
   insertItem:
     handler: src/insertItem.handler
     events:
       - http:
-          path: /item
+          path: /items
           method: post
+
   fetchItems:
     handler: src/fetchItems.handler
     events:
       - http:
           path: /items
           method: get
+
   fetchItem:
     handler: src/fetchItem.handler
     events:
       - http:
           path: /items/{id}
           method: get
+
   updateItem:
     handler: src/updateItem.handler
     events:
       - http:
           path: /items/{id}
           method: put
+
 resources:
   Resources:
     ItemTable:
